--- a/spec/index.html
+++ b/spec/index.html
@@ -3,10 +3,7 @@
 <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
 <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
 <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
-<script type="text/javascript">
-    if (location.hash === '#testem')
-        document.write('<script src="/testem.js"></'+'script>')    
-</script>
+<script type="text/javascript" src="/testem.js"></script>
 
 <script type="text/javascript" src="../dist/tote.js"></script>
 <script type="text/javascript" src="toteSpec.js"></script>
