--- a/404.html
+++ b/404.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html><head><title>tote - Thin namespaced wrapper for localStorage</title><link rel="stylesheet" href="main.css"></head><body><h1>Oops - Busted!</h1>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width"><title>tote - A thin namespaced wrapper for localStorage</title><link rel="stylesheet" href="theme/default.css" media="screen"><script src="prism.js" type="text/javascript"></script></head><body><header><div class="row"><p class="brand">tote</p><nav class="main"><ul><li><a href="spec/">Specs</a></li><li><a href="https://github.com/rudylattae/tote">Github</a></li></ul></nav></div></header><main><aside class="row"><section class="blurb"><p>A thin namespaced wrapper for localStorage</p></section><section class="quickstart"><pre><code class="language-javascript">    var prefs = tote(&#39;preferences&#39;);
+    prefs.set(&#39;theme&#39;, &#39;something&#39;);
+    prefs.get(&#39;theme&#39;);
+    // &#39;something&#39;</code></pre>
+</section></aside><article class="container"><h1>Oops - Busted!</h1>
 <h3>I could not find the page you wanted.</h3>
 <p>Please try another page or go to the <a href="./">homepage</a></p>
-</body></html>
+</article></main><footer><div class="container"><Copyright>&copy; ...</Copyright></div></footer></body></html>
