--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html><head><title>tote - Thin namespaced wrapper for localStorage</title><link rel="stylesheet" href="main.css"></head><body><h1>tote</h1>
-<blockquote>
-<p>Thin namespaced wrapper for localStorage</p>
-</blockquote>
-<h2>Download</h2>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width"><title>tote - A thin namespaced wrapper for localStorage</title><link rel="stylesheet" href="theme/default.css" media="screen"><script src="prism.js" type="text/javascript"></script></head><body><header><div class="row"><p class="brand">tote</p><nav class="main"><ul><li><a href="spec/">Specs</a></li><li><a href="https://github.com/rudylattae/tote">Github</a></li></ul></nav></div></header><main><aside class="row"><section class="blurb"><p>A thin namespaced wrapper for localStorage</p></section><section class="quickstart"><pre><code class="language-javascript">    var prefs = tote(&#39;preferences&#39;);
+    prefs.set(&#39;theme&#39;, &#39;something&#39;);
+    prefs.get(&#39;theme&#39;);
+    // &#39;something&#39;</code></pre>
+</section></aside><article class="container"><h2>Download</h2>
 <p><a href="dist/tote.js">Latest release</a> <a href="dist/tote.min.js">minified</a></p>
 <h2>Tests</h2>
 <p>See your current browser can run the <a href="spec/">specs</a>. </p>
 <h2>Performance</h2>
 <p>See how it <a href="http://jsperf.com/tote-vs-native-storage">performs</a> against the native (non-namespaced) localStorage</p>
-</body></html>
+</article></main><footer><div class="container"><Copyright>&copy; ...</Copyright></div></footer></body></html>
