--- a/404.html
+++ b/404.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width"><title>tote - A thin namespaced wrapper for localStorage</title><link rel="stylesheet" href="theme/default.css" media="screen"><script src="prism.js" type="text/javascript"></script></head><body><header><div class="row"><p class="brand">tote</p><nav class="main"><ul><li><a href="spec/">Specs</a></li><li><a href="https://github.com/rudylattae/tote">Github</a></li></ul></nav></div></header><main><aside class="row"><section class="blurb"><p>A thin namespaced wrapper for localStorage</p></section><section class="quickstart"><pre><code class="language-javascript">    var prefs = tote(&#39;preferences&#39;);
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>tote - A thin namespaced wrapper for localStorage</title><link rel="stylesheet" href="theme/default.css" media="screen"><script src="prism.js" type="text/javascript"></script></head><body><header><div class="row centered"><div class="brand col-6">tote</div><nav class="main col-6"><ul><li><a href="spec/">Specs</a></li><li><a href="https://github.com/rudylattae/tote">GitHub</a></li></ul></nav></div></header><div class="preface"><div class="row centered"><section class="blurb col-6"><p>A thin namespaced wrapper for localStorage</p></section><section class="quickstart col-6"><pre><code class="language-javascript">    var prefs = tote(&#39;preferences&#39;);
     prefs.set(&#39;theme&#39;, &#39;something&#39;);
     prefs.get(&#39;theme&#39;);
     // &#39;something&#39;</code></pre>
-</section></aside><article class="container"><h1>Oops - Busted!</h1>
+</section></div><div class="row centered"><section class="overview col-6"><p>tote enables you to interact with localStorage as though it is a bunch of 
+small containers where you stash specific things. Each "namespaced" instance 
+writes to the same underlying data store, but does not interfere with any others.
+</p></section><section class="download col-6"><h3>Download the latest version</h3><p> <small>v0.2.1-a released Feb 4 2004</small></p><a href="dist/tote.js" class="btn">Download Full</a><a href="dist/tote.min.js" class="btn">Download Minified</a></section></div></div><main><div class="row centered"><article class="col-12"><h1>Oops - Busted!</h1>
 <h3>I could not find the page you wanted.</h3>
 <p>Please try another page or go to the <a href="./">homepage</a></p>
-</article></main><footer><div class="container"><Copyright>&copy; ...</Copyright></div></footer></body></html>
+</article></div></main><footer><div class="row centered"><div class="col-12"> <small>Copyright &copy; 2014 Rudy Lattae | MIT License</small></div></div></footer></body></html>
