--- a/www/spec/index.html
+++ b/www/spec/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
 
 <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
